[package]
name = "gpuinfo"
version = "0.1.2"
authors = ["Edward Hu <bodunhu@utexas.edu>"]
edition = "2018"
license = "MIT"
description = "A minimal command-line utility for querying GPU status"
homepage = "https://github.com/BDHU/gpuinfo"
repository = "https://github.com/BDHU/gpuinfo"
readme = "README.md"
keywords = ["rust", "gpu", "nvidia-smi", "command-line", "monitoring"]
categories = ["command-line-utilities", "gpu"]
exclude = ["*.png", "*.jpg"]

[[bin]]
name = "gpu-info"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
nvml-wrapper = "^0.7.0"
sysinfo = "^0.18.0"

[profile.release]
opt-level = "s"
